--- a/bower.json
+++ b/bower.json
@@ -10,10 +10,12 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "font-awesome": "^4.5.0"
+    "font-awesome": "^4.5.0",
+    "ng-dialog": "^0.6.2"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "^1.4.0",
+    "ng-dialog": "^0.6.2"
   },
   "appPath": "app",
   "moduleName": "App",
